tests/baselines/reference/ES5For-of7.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of7.ts(6,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'undefined', but here has type 'undefined[]'.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of7.ts (1 errors) ====
    for (var w of []) {
        var x = w;
    }
    
    for (var v of []) {
        var x = [w, v];
            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'undefined', but here has type 'undefined[]'.
!!! related TS6203 tests/cases/conformance/statements/for-ofStatements/ES5For-of7.ts:2:9: 'x' was also declared here.
    }